# lis2de12

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  deny.toml
.cargo/: config.toml
.github/workflows/: check.yml  nostd.yml
examples/: embassy_stm32wba.rs
src/: lib.rs  lis2de12.yaml
tools/generate_api/: Cargo.toml
tools/generate_api/src/: main.rs
