[package]
name = "lis2de12"
version = "0.1.1"
description = "Blocking and async driver for the LIS2DE12 accelerometer"
edition = "2024"
authors = ["Gerzain Mata <leftger@gmail.com>"]
repository = "https://github.com/leftger/lis2de12"
license = "MIT OR Apache-2.0"
include = [
	"src/**/*.rs",
	"build.rs",
	"Cargo.toml",
	"README.md",
	"LICENSE*",
	"src/lis2de12.yaml",
]
readme = "README.md"
keywords = ["accelerometer", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
device-driver = { version = "1.0.3", default-features = false, features = [
	"yaml",
] }
accelerometer = "0.12.0"
defmt = { version = "1.0.1", optional = true }


embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }


[build-dependencies]
device-driver-generation = "1.0.7"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
syn = { version = "2.0.111", features = ["full"] }



[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"


[lints.clippy]
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
style = "forbid"
pedantic = "deny"

[features]
default = []

async = ["dep:embedded-hal-async"]

defmt-03 = [
	"dep:defmt",
	"device-driver/defmt-03",
]
