[package]
name = "lis2de12"
version = "0.2.0"
description = "Blocking and async driver for the LIS2DE12 accelerometer with I2C and SPI support"
edition = "2024"
authors = ["Gerzain Mata <leftger@gmail.com>"]
repository = "https://github.com/leftger/lis2de12"
license = "MIT OR Apache-2.0"
include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "src/lis2de12.yaml",
]
readme = "README.md"
keywords = ["accelerometer", "sensor", "i2c", "spi", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
device-driver = { version = "1.0.3", default-features = false, features = ["yaml"] }
accelerometer = "0.12.0"
defmt = { version = "1.0.1", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

[build-dependencies]
device-driver-generation = "1.0.7"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
syn = { version = "2.0.111", features = ["full"] }

[dev-dependencies]
# Temporarily commented out due to feature incompatibilities - need to be updated for examples to work
# defmt-rtt = "0.4.0"
# panic-probe = { version = "0.3.1", features = ["print-defmt"] }
# embassy-executor = { version = "0.6.0", default-features = false, features = ["arch-cortex-m", "defmt"] }
# embassy-stm32 = { version = "0.2.0", default-features = false, features = ["stm32wba65ri", "time-driver-any", "exti", "unstable-pac"] }
# embassy-time = { version = "0.3.0", default-features = false, features = ["defmt"] }
# embassy-sync = { version = "0.6.0", default-features = false, features = ["defmt"] }
# static_cell = "2.1.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
style = "forbid"
pedantic = "deny"

[features]
default = []

async = ["dep:embedded-hal-async"]

defmt-03 = [
    "dep:defmt",
    "device-driver/defmt-03",
]

embassy = [
    "async",
    "defmt-03",
]

# For testing on host machine
std = []
